--- a/src/components/Trade/TradeTabs/Transactions/Transactions.module.css
+++ b/src/components/Trade/TradeTabs/Transactions/Transactions.module.css
@@ -117,6 +117,7 @@
     color: var(--text2);
 }
 .row_container {
+    position: relative;
     width: 100%;
     min-height: 35px;
     transition: all var(--animation-speed) ease-in-out;
